succes in adding db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.application.name=services
 #mongodb+srv://wigo:<db_password>@cluster1.cpybb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
 #spring.data.mongodb.database=userDatabase
 server.port=3000
-spring.data.mongodb.uri=mongodb+srv://wigo:<aQDe7FgnHZGcWy_>@cluster1.cpybb.mongodb.net/?appName=Cluster1
+spring.data.mongodb.uri= mongodb+srv://new_wigo_user:YoErMhU4VknXc5DS@wigo.cpybb.mongodb.net/wigo
 
